--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=7.0",
-        "html5/htmlreader": "*"
+        "html5/htmlreader": "^2.0.1"
     },
     "require-dev": {
         "nette/tester": "*"
