--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "php": ">=7.0",
         "html5/htmlreader": "^2.0.1",
         "rmccue/requests": ">=1.0",
-        "phore/file": "*"
+        "phore/file": "*",
+        "cebe/markdown": "^1.1"
     },
     "require-dev": {
         "nette/tester": "*"
